--- a/package.json
+++ b/package.json
@@ -9,23 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "expo": "~49.0.8",
     "expo-camera": "~13.4.2",
+    "expo-constants": "~14.4.2",
+    "expo-image": "~1.3.2",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-linking": "~5.0.2",
+    "expo-router": "2.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "@expo/vector-icons": "^13.0.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-router": "2.0.0",
+    "react-native-animated-spinkit": "^1.5.2",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-linking": "~5.0.2",
-    "expo-constants": "~14.4.2",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^19.0.0",
-    "expo-image": "~1.3.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
